# AIE9_CERTIFICATION_CHALLENGE

RiskHalo_Certification_Challenge/: .gitignore  DELIVERABLES.md  README.md  api_server.py  main.py  pyproject.toml
RiskHalo_Certification_Challenge/agents/: coach_agent.py
RiskHalo_Certification_Challenge/app/: behavioral_engine.py  expectancy_engine.py  feature_engine.py  parser.py  session_summary_builder.py
RiskHalo_Certification_Challenge/data/Weekly_Trade_Data_Uploads/: Week_10_Trade_data.xlsx  Week_1_Trade_data.xlsx  Week_22_Trade_data.xlsx  Week_24_Trade_data.xlsx  Week_25_Trade_data.xlsx  Week_28_Trade_data.xlsx  Week_2_Trade_data.xlsx  Week_3_Trade_data.xlsx  Week_4_Trade_data.xlsx
RiskHalo_Certification_Challenge/deliverables/: DELIVERABLES.md  LoomVideo.md
RiskHalo_Certification_Challenge/evaluation/: generate_testset.py  personas.py  ragas_eval.py  run_ragas_evaluation.py
RiskHalo_Certification_Challenge/notebooks/: RiskHalo_Certification_Challenge.ipynb  RiskHalo_RAGAS_Evaluation.ipynb
RiskHalo_Certification_Challenge/rag/: prompts.py  retriever.py  vector_store.py
RiskHalo_Certification_Challenge/tests/: conftest.py
RiskHalo_Certification_Challenge/ui/: package-lock.json  package.json
RiskHalo_Certification_Challenge/ui/src/: App.jsx
RiskHalo_Certification_Challenge/ui/src/components/: ChatInput.jsx  ChatMessage.jsx  ChatWindow.jsx  Header.jsx  OscillatingHeadline.jsx  SessionSummaryCard.jsx  UploadPanel.jsx
RiskHalo_Certification_Challenge/ui/src/styles/: global.css
