[project]
name = "riskhalo-certification-challenge"
version = "0.1.0"
description = "RiskHalo - A Behavioral Risk Intelligence Engine for Intraday Traders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "langchain>=0.3.19",
    "langchain-openai>=0.3.7",
    "langchain-community>=0.0.10",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "ipykernel>=6.30.1",
    "chromadb>=0.4.0",
    "ragas==0.2.10",
    "langgraph==0.6.7",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
